--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
-            darkMode: 'class',
             theme: {
                 extend: {
                     fontFamily: {
@@ -83,7 +82,7 @@
 }
 </script>
 </head>
-<body class="bg-white text-gray-900 dark:bg-google-dark dark:text-gray-100 transition-colors duration-300 overflow-x-hidden font-sans">
+<body class="bg-white text-gray-900 transition-colors duration-300 overflow-x-hidden font-sans">
     <div id="root"></div>
 </body>
 </html>
